# minisat

./: CMakeLists.txt  README.md  test-cnf.sh
minisat/core/: Dimacs.h  Distributer.h  Main.cc  Solver.cc  Solver.h  SolverTypes.h
minisat/simp/: Main.cc  SimpSolver.cc
minisat/utils/: Options.cc  System.cc
